--- a/4Ajquery/jquery.html
+++ b/4Ajquery/jquery.html
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body>
-    <!-- First page -->
+    <!-- First page -->m
     <div data-role="page" id="home">
         <div data-role="header">
             <h1>Welcome</h1>
